--- a/backEnd/tsconfig.json
+++ b/backEnd/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "types": ["node", "express"],
+    "moduleResolution": "node",
     "target": "ES2020",
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist",
     "rootDir": "src"
-  }
+  },
+  "include": ["src/**/*"]
 }
