--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -32,7 +32,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-system-ui": "~4.0.9",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
