--- a/backEnd/tsconfig.json
+++ b/backEnd/tsconfig.json
@@ -7,7 +7,7 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "outDir": "dist",
+    "outDir": "build",
     "rootDir": "src"
   },
   "include": ["src/**/*"]
