--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node build/index.js"
+    "start": "node build/index.js",
+    "postinstall": "npm run build"
   },
   "keywords": [],
   "author": "",
