--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node build/index.js",
-    "postinstall": "npm run build"
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +14,12 @@
   "type": "commonjs",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
