--- a/frontEnd/tsconfig.json
+++ b/frontEnd/tsconfig.json
@@ -1,4 +1,9 @@
 {
-  "compilerOptions": { "strict": true, "strictNullChecks": true },
+  "compilerOptions": {
+    "strict": true,
+    "strictNullChecks": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
+  },
   "extends": "expo/tsconfig.base"
 }
