--- a/backEnd/.prettierrc
+++ b/backEnd/.prettierrc
@@ -1,8 +1,7 @@
 {
   "semi": true,
-  "singleQuote": true,
+  "singleQuote": false,
   "trailingComma": "all",
-  "printWidth": 100,
   "tabWidth": 2,
   "endOfLine": "lf"
 }
