--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -16,14 +16,13 @@
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.6",
     "expo": "~52.0.43",
+    "expo-dev-client": "~5.0.20",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.1.0",
-    "prettier": "^3.5.3",
     "react": "18.3.1",
     "react-hook-form": "^7.56.0",
     "react-native": "0.76.9",
@@ -32,17 +31,24 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "yup": "^1.6.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-dev-client": "~5.0.20"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.25.1",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "eslint": "^9.25.1",
     "eslint-config-expo": "~8.0.1",
-    "typescript": "^5.3.3"
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.31.1"
   },
   "private": true
 }
